// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<div>
  <button
    data-testid="test"
  >
  Hi
    save
  </button>
</div>
`;

exports[`matches snapshot 1 1`] = `
<div>
  <button
    data-testid="test"
  >
    Hi 
    save
  </button>
</div>
`;

exports[`matches snapshot 2 1`] = `
<div>
  <button
    data-testid="test"
  >
    Hi 
    click me please
  </button>
</div>
`;
